fix coming off screen graph

--- a/src/components/styles/Activity3Game.scss
+++ b/src/components/styles/Activity3Game.scss
@@ -546,6 +546,7 @@ $card-height: calc(#{$card-min-width} - 20px);
 .final-result {
   border: 4px solid black;
   border-radius: 20px;
+  margin: 2%;
 }
 
 h3 {
